--- a/ChatBotwithOpenAiAPI.ipynb
+++ b/ChatBotwithOpenAiAPI.ipynb
@@ -67,7 +67,7 @@
       },
       "outputs": [],
       "source": [
-        "openai.api_key = \"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\""
+        "openai.api_key = "
       ]
     },
     {
